feat: setup rabitmq & create notifications api
